--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Diligent software engineer with 1 year experience in commercial application development.
-                Eager to join XDBS to build innovative and cutting edge business solutions for the impressive suite of clients within its global reach.
+                Diligent software engineer
+                Eager build innovative and cutting edge business solutions for the impressive suite of clients within its global reach.
                 In previous roles,
                 slashed downtime by 25% and ensured 98% on-time project completion. 
                 Also identified and dealt with a significant process bottleneck 
@@ -155,13 +155,7 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
           <p class="contact-wrapper__text">+918624874969</p>
-          <a
-            rel="noreferrer"
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="https://www.gmail.com"
-            >Call to Action</a
-          >
+        
         </div>
       </div>
     </section>
