--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Diligent software engineer
-                Eager build innovative and cutting edge business solutions for the impressive suite of clients within its global reach.
+                Diligent software engineer.
+                Eager to build innovative and cutting edge business solutions for the impressive suite of clients within its global reach.
                 In previous roles,
                 slashed downtime by 25% and ensured 98% on-time project completion. 
                 Also identified and dealt with a significant process bottleneck 
