--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                 <h3 class="project-wrapper__text-title">Project--FACE RECOGNITION BRAIN</h3>
                 <div>
                   <p class="mb-4">
-                    In this , you can detect the faces you want, in any picture.
+                    In this , you can detect the faces you want, in any image downloaded from web, only put the human image link in the box and you will get the face detection there.
                   </p>
                 </div>
                 <a
