--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-Ji<!--
+<!--
   Hello!
   -
   Simplefolio is a clean and responsive portfolio template for Developers!
@@ -105,7 +105,7 @@ Ji<!--
                 <h3 class="project-wrapper__text-title">Project--FACE RECOGNITION BRAIN</h3>
                 <div>
                   <p class="mb-4">
-                    In this , you can detect the faces you want, in any image downloaded from web, 1st you have to register with template email then put the human image link in the box and you will get the face detection there.
+                    In this , you can detect the faces you want, in any image downloaded from web, 1st you have to register then put the human image link in the box and you will get the face detection there.
                   </p>
                 </div>
                 <a
