--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="http://smartyybrain.herokuapp.com"
+                  href="http://smartybrain.herokuapp.com"
                 >
                   See Live
                 </a>
